tests/samples/negative/types/function_const_abi_collision.ax
module function_const_abi_collision;

const VALUE: i32 = 41;

@name("m0_function_const_abi_collision_VALUE")
fn collide() -> i32 {
  return 1;
}

fn main() -> i32 {
  return VALUE + collide();
}
